project(protostar CXX)

set(
protostar_src
"src/protostar/async/ProtectedArithmetic.cpp"
"src/protostar/async/ProtectedArithmetic.hpp"
"src/protostar/async/Task.cpp"
"src/protostar/async/Task.hpp"
"src/protostar/async/ThreadPool.cpp"
"src/protostar/async/ThreadPool.hpp"
"src/protostar/events/KeyCharEvent.cpp"
"src/protostar/events/KeyCharEvent.hpp"
"src/protostar/events/KeyDownEvent.cpp"
"src/protostar/events/KeyDownEvent.hpp"
"src/protostar/events/KeyUpEvent.cpp"
"src/protostar/events/KeyUpEvent.hpp"
"src/protostar/events/MouseMovedEvent.cpp"
"src/protostar/events/MouseMovedEvent.hpp"
"src/protostar/events/MousePressedEvent.cpp"
"src/protostar/events/MousePressedEvent.hpp"
"src/protostar/events/MouseReleasedEvent.cpp"
"src/protostar/events/MouseReleasedEvent.hpp"
"src/protostar/events/MouseWheelEvent.cpp"
"src/protostar/events/MouseWheelEvent.hpp"
"src/protostar/graphics/Colour.cpp"
"src/protostar/graphics/Colour.hpp"
"src/protostar/graphics/Rect.cpp"
"src/protostar/graphics/Rect.hpp"
"src/protostar/math/Maths.cpp"
"src/protostar/math/Maths.hpp"
"src/protostar/math/Random.cpp"
"src/protostar/math/Random.hpp"
"src/protostar/math/RectPack.cpp"
"src/protostar/math/RectPack.hpp"
"src/protostar/res/ResourceCache.cpp"
"src/protostar/res/ResourceCache.hpp"
"src/protostar/state/State.cpp"
"src/protostar/state/State.hpp"
"src/protostar/state/StateMachine.cpp"
"src/protostar/state/StateMachine.hpp"
"src/protostar/system/Concepts.cpp"
"src/protostar/system/Concepts.hpp"
"src/protostar/system/Keys.cpp"
"src/protostar/system/Keys.hpp"
"src/protostar/system/Time.cpp"
"src/protostar/system/Time.hpp"
"src/protostar/system/UniqueID.cpp"
"src/protostar/system/UniqueID.hpp"
)

source_group(TREE "" FILES ${protostar_src})
add_library("protostar" STATIC ${protostar_src})
