project(starmap CXX)

set(
starmap_src
"src/starmap/detail/Decoder.cpp"
"src/starmap/detail/Decoder.hpp"
"src/starmap/layer/GroupLayer.cpp"
"src/starmap/layer/GroupLayer.hpp"
"src/starmap/layer/ImageLayer.cpp"
"src/starmap/layer/ImageLayer.hpp"
"src/starmap/layer/Layer.cpp"
"src/starmap/layer/Layer.hpp"
"src/starmap/layer/ObjectLayer.cpp"
"src/starmap/layer/ObjectLayer.hpp"
"src/starmap/layer/TileLayer.cpp"
"src/starmap/layer/TileLayer.hpp"
"src/starmap/Map.cpp"
"src/starmap/Map.hpp"
"src/starmap/Meta.cpp"
"src/starmap/Meta.hpp"
"src/starmap/tile/Tile.cpp"
"src/starmap/tile/Tile.hpp"
"src/starmap/tile/TileOffset.cpp"
"src/starmap/tile/TileOffset.hpp"
"src/starmap/tile/Tileset.cpp"
"src/starmap/tile/Tileset.hpp"
"src/starmap/types/Chunk.cpp"
"src/starmap/types/Chunk.hpp"
"src/starmap/types/Frame.cpp"
"src/starmap/types/Frame.hpp"
"src/starmap/types/Grid.cpp"
"src/starmap/types/Grid.hpp"
"src/starmap/types/Object.cpp"
"src/starmap/types/Object.hpp"
"src/starmap/types/Point.cpp"
"src/starmap/types/Point.hpp"
"src/starmap/types/Property.cpp"
"src/starmap/types/Property.hpp"
"src/starmap/types/Terrain.cpp"
"src/starmap/types/Terrain.hpp"
"src/starmap/types/Text.cpp"
"src/starmap/types/Text.hpp"
"src/starmap/wangtile/WangColour.cpp"
"src/starmap/wangtile/WangColour.hpp"
"src/starmap/wangtile/WangSet.cpp"
"src/starmap/wangtile/WangSet.hpp"
"src/starmap/wangtile/WangTile.cpp"
"src/starmap/wangtile/WangTile.hpp"
)

source_group(TREE "" FILES ${starmap_src})
add_library("starmap" STATIC ${starmap_src})
